--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@sanity/client": "^6.2.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.4",
+    "@supabase/supabase-js": "^2.31.0",
+    "@vercel/analytics": "^1.0.1",
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
@@ -29,6 +31,7 @@
     "react-icons": "^4.7.1",
     "react-lite-youtube-embed": "^2.3.52",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-nextjs-toast": "^1.2.5",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
