--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-tailwind-blog",
-  "description": "a nextjs and tailwindcss blog",
+  "name": "the dev vine",
+  "description": "the dev vine",
   "version": "1.0.5",
   "private": true,
   "license": "UNLICENSED",
